MGNLUI-1094 ensured proper theming for checkboxes and option-groups, solving the label alignment along the way

--- a/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/admincentraltheme.scss
+++ b/magnolia-ui-vaadin-widgetset/src/main/resources/VAADIN/themes/admincentraltheme/admincentraltheme.scss
@@ -59,41 +59,6 @@
   	float: right;
   }
 
-  /* Checkbox styles */
-
-  .v-checkbox > input[type="checkbox"],
-  .gwt-CheckBox > input[type="checkbox"] {
-  	margin:0;
-      opacity:0;
-  }
-
-  .v-checkbox > label,
-  .gwt-CheckBox > label {
-      display:inline-block;
-      margin-left:-13px;
-      min-width:15px;
-      min-height:15px;
-      text-indent:20px;
-      vertical-align:middle;
-  }
-
-  .v-checkbox > input[type="checkbox"] + label,
-  .gwt-CheckBox > input[type="checkbox"] + label {
-      background-image:url('img/icon-checkbox_off.png'); /* SVG with PNG fallback technique */
-      background-image:none, url('img/icon-checkbox_off.svg');
-  	background-position:0 center;
-  	background-repeat:no-repeat;
-      background-size:15px 15px;
-      -o-background-size:15px 15px;
-      -webkit-background-size:15px 15px;
-  }
-
-  .v-checkbox > input[type="checkbox"]:checked + label,
-  .gwt-CheckBox > input[type="checkbox"]:checked + label {
-  	background-image:url('img/icon-checkbox_on.png');
-  	background-image:none, url('img/icon-checkbox_on.svg');
-  }
-
   /*TwinCol styles*/
 
   .v-select-twincol {
